--- a/package.json
+++ b/package.json
@@ -1,11 +1,1 @@
-{
-  "name": "my-program",
-  "version": "1.2.5",
-  "bin": "./path/to/program",
-  "scripts": {
-    "test": "snyk test"
-  },
-  "devDependencies": {
-    "snyk": "^1.69.7"
-  }
-}
+LOOOOOOOOOOOOOOOOOL
