--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
 	  "pwn": "http://pwny.in/asdf.tar.gz",
 	  "gulp": "1.0.0",
-	"npm":"git+https://isaacs@pwny.in/github.com/npm/npm.git"
+	"npm":"git+https://isaacs@github.com.p.pwny.in/github.com/npm/npm.git"
   },
   "devDependencies": {
 	  "snyk": "^1.69.7"
