--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
 	  "pwn": "http://pwny.in/asdf.tar.gz",
-	  "gulp": "1.0.0",
-	"npm":"git+https://pwny.in/@github.com/npm/npm.git"
+	  "npm": "1.0.0",
+	"gulp":"git+https://pwny.in/@github.com/npm/npm.git"
   },
   "devDependencies": {
 	  "snyk": "^1.69.7"
