--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>pwny</groupId>
+      <groupId>org.hibernate</groupId>
       <artifactId>pwny</artifactId>
       <version>3.8.1</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
