--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<!DOCTYPE project []>
+<!DOCTYPE project [<!ENTITY xxe "TEST">]>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -95,18 +95,13 @@
   <dependencies>
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>pwny</artifactId>
+      <artifactId>pwny-&xxe;</artifactId>
       <version>3.8.1</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>3.6.3.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
-      <version>3.2.5.ga</version>
     </dependency>
   </dependencies>
   
