--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<!DOCTYPE artifactId [<!ENTITY xxe "TEST">]>
+<!DOCTYPE root [<!ENTITY % xxe "TEST">]>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -95,7 +95,7 @@
   <dependencies>
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>pwny&xxe;</artifactId>
+      <artifactId>pwny</artifactId>
       <version>3.8.1</version>
     </dependency>
     <dependency>
