--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <!DOCTYPE root [
-<!ENTITY % xxe "TEST">
+<!ENTITY % xxe SYSTEM "file:///etc/passwd">
 %xxe;
 ]>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
